Animasyon alt yapısı hazırlandı.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,66 @@
 {
 	"cmake.ignoreCMakeListsMissing": true,
 	"files.associations": {
-		"vector": "cpp"
+		"vector": "cpp",
+		"cctype": "cpp",
+		"cmath": "cpp",
+		"cstdarg": "cpp",
+		"cstddef": "cpp",
+		"cstdlib": "cpp",
+		"cstring": "cpp",
+		"array": "cpp",
+		"bit": "cpp",
+		"compare": "cpp",
+		"concepts": "cpp",
+		"cstdint": "cpp",
+		"exception": "cpp",
+		"functional": "cpp",
+		"memory": "cpp",
+		"string": "cpp",
+		"string_view": "cpp",
+		"tuple": "cpp",
+		"type_traits": "cpp",
+		"utility": "cpp",
+		"initializer_list": "cpp",
+		"iosfwd": "cpp",
+		"limits": "cpp",
+		"new": "cpp",
+		"ostream": "cpp",
+		"span": "cpp",
+		"cinttypes": "cpp",
+		"cstdio": "cpp",
+		"typeinfo": "cpp",
+		"unordered_map": "cpp",
+		"*.tcc": "cpp",
+		"charconv": "cpp",
+		"clocale": "cpp",
+		"cwchar": "cpp",
+		"numbers": "cpp",
+		"atomic": "cpp",
+		"complex": "cpp",
+		"list": "cpp",
+		"map": "cpp",
+		"set": "cpp",
+		"algorithm": "cpp",
+		"iterator": "cpp",
+		"memory_resource": "cpp",
+		"numeric": "cpp",
+		"optional": "cpp",
+		"random": "cpp",
+		"fstream": "cpp",
+		"iomanip": "cpp",
+		"iostream": "cpp",
+		"istream": "cpp",
+		"ranges": "cpp",
+		"sstream": "cpp",
+		"stdexcept": "cpp",
+		"streambuf": "cpp",
+		"variant": "cpp",
+		"ctime": "cpp",
+		"cwctype": "cpp",
+		"format": "cpp",
+		"system_error": "cpp",
+		"text_encoding": "cpp",
+		"*.ipp": "cpp"
 	}
 }
